--- a/mentions.html
+++ b/mentions.html
@@ -363,7 +363,7 @@
         <div class="answer">
           <p>Le responsable du traitement des données sur ce site Web est :</p>
           <ul>
-            <li>Téléphone : +229</li>
+            <li>Téléphone : +229 97 96 38 96</li>
             <li>Courriel : messagerie@lagraceparle.org</li>
           </ul>
           <p>
