--- a/ministere.html
+++ b/ministere.html
@@ -446,7 +446,7 @@
         </h6>
         <a
           class="btn btn-outline-primary py-2 px-3"
-          href="https://radioenlignefrance.com/maranatha"
+          href="https://radiovolna.net/fr/423838-maranatha.html"
           target="_blank"
         >
           <img src="./img/Radio.webp" width="80" height="80" alt="" />
@@ -491,6 +491,12 @@
   
 
 <br>
+<h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
+<p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN, saisissez le montant suivi de #. Pour Moov, composez *1 suivi de # en cliquant sue l'un des button. </p>
+<p style="padding: 15px;">Vous pouvez entrer manuellement le code sur l'affiche, que ce soit pour MTN ou Moov.</p>
+<p style="padding: 15px;">  <button class="mui-button secondary-button"><a style="color: white;" href="tel:*880*41*100000*">MTN</a></button>
+  <button class="mui-button primary"><a style="color: white;"  href="tel:*855*4*1*86260*">MOOV</a></button></p>
+
 <div class="child14"></div>
 <br>
   </div>
@@ -511,7 +517,7 @@
           réunissons pour la prière, la méditation, et la réflexion spirituelle,
           dans un cadre calme et paisible.
         </p>
-        <a
+        <!-- <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
         >
@@ -521,17 +527,11 @@
           >
             <i class="fa fa-arrow-right"></i>
           </div>
-        </a>
+        </a> -->
 
         <br />
 
-        <div class="prayer-info-container">
-          <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
-            <h2>Mardi Férié</h2>
-            <p><strong>Heure :</strong> 12h30 - 15h00</p>
-          </div>
-        </div>
+    
       </div>
       <div class="child8"></div>
     </div>
@@ -553,7 +553,7 @@
           liens familiaux, apporte la sérénité aux foyers et favorise une
           transformation positive dans la vie de chaque participante.
         </p>
-        <a
+        <!-- <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
         >
@@ -563,7 +563,7 @@
           >
             <i class="fa fa-arrow-right"></i>
           </div>
-        </a>
+        </a> -->
       </div>
     </div>
     <div class="parent flex-one">
@@ -584,7 +584,7 @@
           prière, la méditation et la réflexion personnelle, ils aspirent à une
           compréhension plus profonde de leur foi et de leur chemin spirituel.
         </p>
-        <a
+        <!-- <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
         >
@@ -594,7 +594,7 @@
           >
             <i class="fa fa-arrow-right"></i>
           </div>
-        </a>
+        </a> -->
 
         <br />
       </div>
@@ -619,7 +619,7 @@
           de l'Eternel à se joindre à nous pour apporter une dimension unique à
           cette célébration, inspirant et édifiant tous ceux qui l'assistent.
         </p>
-        <a
+        <!-- <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
         >
@@ -629,7 +629,7 @@
           >
             <i class="fa fa-arrow-right"></i>
           </div>
-        </a>
+        </a> -->
       </div>
     </div>
     <div class="parent flex-one">
@@ -655,7 +655,7 @@
           mémorable, créant ainsi des moments de camaraderie et de célébration
           inoubliables.
         </p>
-        <a
+        <!-- <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
         >
@@ -665,7 +665,7 @@
           >
             <i class="fa fa-arrow-right"></i>
           </div>
-        </a>
+        </a> -->
 
         <br />
       </div>
