--- a/philharmonie.html
+++ b/philharmonie.html
@@ -479,8 +479,7 @@
           bec muni d'une anche simple. Pour produire des sons, le clarinettiste
           souffle de l'air dans le bec et utilise les doigts pour couvrir et
           découvrir les trous le long du corps de l'instrument. Chaque trou
-          représente une note différente, et en variant la combinaison des
-          doigts, le musicien peut jouer une large gamme de notes.
+          représente une note différente.
         </p>
         <button class="mui-button secondary">
           <a href="" style="color: white">commander</a>
@@ -608,7 +607,7 @@
           prononcée. Comme la trompette, le cornet est doté d'un embouchure en
           forme de petite coupe, et le musicien produit des sons en soufflant de
           l'air dans l'embouchure et en utilisant les valves pour changer la
-          longueur du tube, ce qui permet de produire différentes notes.
+          longueur du tube.
         </p>
         <button class="mui-button secondary">
           <a href="" style="color: white">commander</a>
@@ -617,9 +616,9 @@
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
     </div>
-    <div class="headerTwo">
+    <header>
       <h1>Découvrez en images les différentes sorties de la philharmonie.</h1>
-    </div>
+    </header>
 
     <!-- <div class="video-grid">
       <div class="video">
@@ -670,7 +669,10 @@
       </div>
     </div>
     <header>
-      <h1>Rejoignez à présent notre philharmonie.</h1>
+      <h1>
+        Rejoignez à présent notre philharmonie et continuez l'aventure avec
+        nous.
+      </h1>
     </header>
     <p style="padding: 15px">
       Rejoignez notre prestigieuse philharmonie en remplissant simplement notre
