--- a/about.html
+++ b/about.html
@@ -353,7 +353,7 @@ Objectifs
                 <li style='text-align:justify'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui unissent notre communauté chrétienne.</li>
                 <li>Consulter le formulaire et suivez les étapes indiquez : <a href='contact.html#subscribeForm' style="color: #FFC300;">Remplissez le formulaire</a></li>
               </ol>
-              <p style='text-align:justify'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
+            
             </div>
             <h1>Don En Espèce</h1>
             <div class="col-12">
@@ -379,11 +379,11 @@ Objectifs
 
   <section id="vision">
     <h2>Vision<img width="40" src="./img/but.png" alt="" ></h2>
-    <p> Créer un monde où les personnes vulnérables sont soutenues et autonomisées, où la jeunesse accède à une éducation de qualité et à des opportunités de formation professionnelle, où l'environnement et les ressources naturelles sont préservés pour les générations futures, où la culture béninoise est célébrée et promue, et où les droits de l'homme sont défendus et respectés.</p>
+    <p style="text-align: justify;"> Créer un monde où les personnes vulnérables sont soutenues et automatisées, où la jeunesse accède à une éducation de qualité et à des opportunités de formation professionnelle, où l'environnement et les ressources naturelles sont préservés pour les générations futures, où la culture béninoise est célébrée et promue, et où les droits de l'homme sont défendus et respectés.</p>
   </section>
   <section id="mission">
     <h2>Mission<img width="40" src="./img/mission.webp" alt="" ></h2>
-    <p> Notre mission est d'assister activement les personnes vulnérables en offrant un soutien et des ressources essentiels, de faciliter l'accès à une éducation de base de qualité et à des programmes de formation professionnelle pour les jeunes, de participer activement à la conservation et à la préservation de l'environnement et des ressources naturelles, de promouvoir et de valoriser la culture béninoise à travers diverses initiatives, et de défendre inlassablement les droits de l'homme en sensibilisant et en plaidant pour leur respect.</p>
+    <p style="text-align: justify;"> Notre mission est d'assister activement les personnes vulnérables en offrant un soutien et des ressources essentiels, de faciliter l'accès à une éducation de base de qualité et à des programmes de formation professionnelle pour les jeunes, de participer activement à la conservation et à la préservation de l'environnement et des ressources naturelles, de promouvoir et de valoriser la culture béninoise à travers diverses initiatives, et de défendre inlassablement les droits de l'homme en sensibilisant et en plaidant pour leur respect.</p>
   </section>
 </main></div>
 <br>
