--- a/about.html
+++ b/about.html
@@ -357,7 +357,8 @@ Objectifs
             </div>
             <h1>Don En Espèce</h1>
             <div class="col-12">
-              <button style="color: #fff;" ><a href="https://me.fedapay.com/wP6ip9Oe" target="_blank">Faire un don</a></button>
+              <button style="background-color: #FFC300;"
+               ><a style="color: #fff;" href="https://me.fedapay.com/wP6ip9Oe" target="_blank">Faire un don</a></button>
               <!-- <button id="donateButton" class="btn btn-primary px-5" style="height: 60px">
                <a style="color: black; " target="_blank" href="https://me.fedapay.com/wP6ip9Oe">Faire un don</a>
                 <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
