--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -761,10 +761,11 @@ BOUTIQUE
     </div>
   </div>
   <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
-  <p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN, saisissez le montant suivi de #. Pour Moov, composez *1 suivi de # en cliquant sue l'un des button. </p>
-  <p style="padding: 15px;">Vous pouvez entrer manuellement le code sur l'affiche, que ce soit pour MTN ou Moov.</p>
+  <p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN en un clic, cliquer sur le bouton MTN, saisissez le montant suivi de #. Pour MOOV, saisissez le montant suivi, composez *1 suivi de # en cliquant sur le bouton MOOV. </p>
   <p style="padding: 15px;">  <button class="mui-button secondary-button"><a href="tel:*880*41*100000*">MTN</a></button>
     <button class="mui-button primary"><a href="tel:*855*4*1*86260*">MOOV</a></button></p>
+  <p style="padding: 15px;">Vous pouvez entrer manuellement le code sur l'affiche, que ce soit pour MTN ou MOOV.</p>
+
 
   <div class="child14"></div>
   <br>
