--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -52,7 +52,7 @@
     </script>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Open Sans", sans-serif;
         margin: 0;
         padding: 0;
       }
