--- a/index.html
+++ b/index.html
@@ -623,7 +623,18 @@ BOUTIQUE
       <h3>
         Visite Émotionnelle à l'Orphelinat</h3>
       <p>
-        Nous avons une mission profondes: apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et .....
+        Nous avons une mission profonde :
+        apporter de l'espoir, du soutien et des opportunités aux enfants qui
+        ont perdu leurs parents. Nous croyons que chaque enfant mérite un
+        avenir prometteur, et c'est pourquoi nous travaillons sans relâche
+        pour réaliser cette vision. Nous nous engageons à visiter
+        régulièrement les orphelins, à établir des liens affectueux et à leur
+        offrir une éducation de qualité. Nous sommes déterminés à les préparer
+        pour un avenir brillant, en les dotant des compétences et des
+        ressources nécessaires pour réussir dans la vie.Rejoignez notre cause
+        en tant que bénévole, en faisant un don ou en découvrant nos
+        initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins,
+        un acte de bonté à la fois.
       </p>
       <a class="btn btn-outline-primary py-2 px-3"  href="humanitaire.html">
      En savoir plus
@@ -700,10 +711,16 @@ BOUTIQUE
     <div class="child2">
       <h3>Brigade de Prière</h3>
       <p>
-        La brigade de prière est un programme qui se déroule au sein de notre
+        La brigade de Prière est un programme qui se déroule au sein de notre
         centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
         radio Maranata(103.1). C'est un programme ou les personnes de toute
-        communauté ......
+        communauté religieuse se rassemblent pour élever leur voix à Dieu pour
+        une intervention divine de notre seigneur Jésus que ce soit pour la
+        guérison, le travail, la santé et d'autres bénédictions divines. Nous
+        offrons un espace de prière et d'intercession pour les besoins
+        spirituels et matériels de chacun. Vous pouvez nous joindre pour nos
+        séances de prières visant à solliciter les bénédictions de Dieu dans
+        divers aspects de votre vie.
       </p>
       <a
         class="btn btn-outline-primary py-2 px-3"
@@ -776,7 +793,15 @@ BOUTIQUE
     <div class="child2">
       <h3>Philharmonie La Grâce Parle </h3>
       <p>
-        Notre branche de musique Philharmonie La Grâce Parle offre une variété de services pour répondre aux besoins de nos communautés. Nous organisons des concerts en direct pour partager notre ....
+        Notre branche de musique Philharmonie La Grâce Parle offre une variété
+        de services pour répondre aux besoins de nos communautés. Nous
+        organisons des concerts en direct pour partager notre musique et notre
+        message de foi. Nous proposons également des ateliers de musique pour
+        aider les gens à développer leurs compétences et leur passion pour la
+        musique. Enfin, nous sommes fiers de collaborer avec d'autres artistes
+        pour créer des projets musicaux uniques et inspirants. Chez nous, la
+        musique est plus qu'un simple divertissement, c'est une expérience de
+        foi et de communauté.
       </p>
       <a class="btn btn-outline-primary py-2 px-3" href="philharmonie.html">
         En savoir plus
@@ -823,13 +848,10 @@ BOUTIQUE
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                Je rends grâce à Dieu pour avoir guéri ma maladie grave, une véritable intervention divine qui a transformé ma vie.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <h5 class="mb-1">Guérison Miraculeuse</h5>
+              <span class="fst-italic">Edouard</span>
             </div>
           </div>
           <div class="testimonial-item text-center">
@@ -840,37 +862,31 @@ BOUTIQUE
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                La restauration de ma famille, autrefois déchirée par les conflits, est un miracle qui me remplit de gratitude envers Dieu.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <h5 class="mb-1">Famille Restaurée</h5>
+              <span class="fst-italic">Jean</span>
             </div>
           </div>
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/user.png"
+              src="img/user-wife.webp"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                J'étais au bord de la faillite, mais Dieu m'a donné une nouvelle opportunité qui a transformé ma situation financière, je suis reconnaissant au-delà des mots.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <h5 class="mb-1">Nouvelle Opportunité</h5>
+              <span class="fst-italic">Yvette</span>
             </div>
           </div>
         </div>
       </div>
+      <p>Découvrez d'autres témoignages encourageants dans la section     <button class="mui-button success" style="color: #ccc;"><a href="humanitaire.html">The daily mediation</a></button> </p>
     </div>
     <!-- Testimonial End -->
-
 
     <!-- Footer Start -->
     <div
