--- a/temoignage.html
+++ b/temoignage.html
@@ -446,59 +446,86 @@
       femmes et d'hommes qui ont placé leur confiance en Dieu, découvrant ainsi
       comment sa puissance et son amour transforment leurs vies.
     </p>
-    <!-- <div class="prayer-info-container">
+    <div class="prayer-info-container">
       <div class="prayer-info">
         <i class=""
           ><img src="./img/user.webp" width="100" height="100" alt=""
         /></i>
-        <h6>Test 3</h6>
+        <h6>Edouard(Bénin)</h6>
         <p>
-          Donec mollis hendrerit risus. Etiam iaculis nunc ac metus. Suspendisse
-          faucibus, nunc et pellentesque egestas, lacus ante convallis tellus,
-          vitae iaculis lacus elit id tortor. Maecenas malesuada.
+          Je rends grâce à Dieu pour avoir guéri ma maladie grave, une véritable
+          intervention divine qui a transformé ma vie.
         </p>
       </div>
       <div class="prayer-info">
         <i class=""
           ><img src="./img/user-wife.webp" width="100" height="100" alt=""
         /></i>
-        <h6>Test 1</h6>
+        <h6>Jean(Bénin)</h6>
         <p>
-          Suspendisse faucibus, nunc et pellentesque egestas, lacus ante
-          convallis tellus, vitae iaculis lacus elit id tortor. Maecenas
-          malesuada.
+          La restauration de ma famille, autrefois déchirée par les conflits,
+          est un miracle qui me remplit de gratitude envers Dieu.
+        </p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/user-wife.webp" width="100" height="100" alt=""
+        /></i>
+        <h6>Yvette(Togo)</h6>
+        <p>
+          J'étais au bord de la faillite, mais Dieu m'a donné une nouvelle
+          opportunité qui a transformé ma situation financière, je suis
+          reconnaissant au-delà des mots
+        </p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/user-wife.webp" width="100" height="100" alt=""
+        /></i>
+        <h6>Matthieu(Niger)</h6>
+        <p>
+          La profonde paix intérieure et le renouvellement spirituel que j'ai
+          trouvé en Jésus sont des bénédictions pour lesquelles je suis
+          éternellement reconnaissant
         </p>
       </div>
       <div class="prayer-info">
         <i class=""
           ><img src="./img/user.webp" width="100" height="100" alt=""
         /></i>
-        <h6>Test 2</h6>
+        <h6>Esther(Bénin)</h6>
         <p>
-          Suspendisse faucibus, nunc et pellentesque egestas, lacus ante
-          convallis tellus, vitae iaculis lacus elit id tortor. Maecenas
-          malesuada.
+          Dieu m'a protégé lors d'une situation dangereuse, et je Lui rends
+          grâce pour avoir veillé sur moi et m'avoir préservé.
         </p>
       </div>
-    </div> -->
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/user.webp" width="100" height="100" alt=""
+        /></i>
+        <h6>François(Sénégal)</h6>
+        <p>
+          La guidance divine dans ma vie m'a permis de prendre des décisions
+          cruciales avec confiance, et je rends grâce à Dieu pour Sa sagesse
+          constante.
+        </p>
+      </div>
+    </div>
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
+      <h2 style="text-align: center">ILS TÉMOIGNENT DE LA GRÂCE DE DIEU</h2>
+      <p style="padding: 15px">
+        Explorer les témoignages inspirants de femmes et d'hommes de grâce qui
+        ont placé leur confiance en Dieu, découvrant ainsi comment sa puissance
+        et son amour transforment leurs vies.
+      </p>
       <div class="container">
         <div
           class="text-center mx-auto mb-5 wow fadeInUp"
           data-wow-delay="0.1s"
           style="max-width: 500px"
-        >
-          <!-- <div
-            class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
-          >
-            Testimonial
-          </div> -->
-          <!-- <h1 class="display-6 mb-5">
-            Trusted By Thousands Of People And Nonprofits
-          </h1> -->
-        </div>
+        ></div>
         <div
           class="owl-carousel testimonial-carousel wow fadeInUp"
           data-wow-delay="0.1s"
@@ -511,13 +538,11 @@
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                Je rends grâce à Dieu pour avoir guéri ma maladie grave, une
+                véritable intervention divine qui a transformé ma vie.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <h5 class="mb-1">Guérison Miraculeuse</h5>
+              <span class="fst-italic">Edouard</span>
             </div>
           </div>
           <div class="testimonial-item text-center">
@@ -528,35 +553,33 @@
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                La restauration de ma famille, autrefois déchirée par les
+                conflits, est un miracle qui me remplit de gratitude envers
+                Dieu.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <h5 class="mb-1">Famille Restaurée</h5>
+              <span class="fst-italic">Jean</span>
             </div>
           </div>
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/user.png"
+              src="img/user-wife.webp"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                J'étais au bord de la faillite, mais Dieu m'a donné une nouvelle
+                opportunité qui a transformé ma situation financière, je suis
+                reconnaissant au-delà des mots.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <h5 class="mb-1">Nouvelle Opportunité</h5>
+              <span class="fst-italic">Yvette</span>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
     <p style="padding: 15px">
@@ -568,6 +591,73 @@
       ce que Dieu a fait pour vous.
     </p>
 
+    <div class="containers">
+      <div class="boxs box1s">
+        <div class="icons">
+          <span class="icon">&#128161;</span>
+          <button style="background-color: #ffc400" class="mui-button success">
+            <a style="color: #fff" href="newsletter.html"
+              >The daily mediation</a
+            >
+          </button>
+        </div>
+        <h2 style="color: white">Recevoir une méditation tous les jours</h2>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: white" href="newsletter.html#subscribe"
+            >JE MABONNE</a
+          >
+        </button>
+      </div>
+      <div class="boxs box2s">
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: #fff" href="form_temoignage.html">MON TÉMOIGNAGE</a>
+        </button>
+
+        <button
+          style="
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: transparent;
+
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: #fff" href="contact.html">NOUS ÉCRIRE UN EMAIL</a>
+        </button>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: #fff" href="prayer.html">DEMANDER LA PRIÈRE</a>
+        </button>
+      </div>
+    </div>
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
