--- a/newsletter.html
+++ b/newsletter.html
@@ -328,6 +328,9 @@
     <h1 class="" style="text-align: center; background: #ffc400">
       Initiez votre journée en prenant des vitamines spirituelles !
     </h1>
+    <header>
+      <h1>Initiez votre journée en prenant des vitamines spirituelles !</h1>
+    </header>
     <div id="textLong">
       <p style="text-align: justify">
         Chaque journée, le Ministère chrétien "La Grâce Parle" propose une
@@ -349,18 +352,21 @@
       <h2 class="message-title">Quisque ut nisi</h2>
       <p class="message-author">Auteur</p>
       <p class="message-content">
-        Phasellus dolor. Vivamus elementum semper nisi. Nulla facilisi. Mauris
-        sollicitudin fermentum libero. Maecenas tempus, tellus eget condimentum
-        rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed
-        ipsum. Vestibulum facilisis, purus nec pulvinar iaculis, ligula mi
-        congue nunc, vitae euismod ligula urna in dolor. Praesent vestibulum
-        dapibus nibh. In hac habitasse platea dictumst. Vivamus elementum semper
-        nisi. Fusce ac felis sit amet ligula pharetra condimentum. Donec mi
-        odio, faucibus at, scelerisque quis, convallis in, nisi. Nunc nec neque.
-        Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Praesent
-        adipiscing. Etiam sollicitudin, ipsum eu pulvinar rutrum, tellus ipsum
-        laoreet sapien, quis venenatis ante odio sit amet eros. Pellentesque
-        libero tortor, tincidunt et, tincidunt eget, semper nec, quam.
+        Nous vivons dans un monde où le calcul, la compétition et la comparaison
+        sont souvent monnaie courante. Cela peut nous amener à "tenir nos
+        comptes" : compter les succès et les échecs, les bénédictions et les
+        pertes, les faveurs rendues et celles reçues. Cependant, la Bible nous
+        rappelle une perspective différente, une perspective centrée sur la
+        grâce et l'amour de Dieu. Dans cette newsletter, nous allons explorer ce
+        thème à travers quelques versets bibliques inspirants.
+      </p>
+      <h3>L'abondance de la grâce de Dieu</h3>
+      <p>
+        "Et Dieu est puissant pour vous combler de toutes sortes de grâce, afin
+        que, possédant toujours en toutes choses de quoi satisfaire à tous vos
+        besoins, vous abondiez en toute bonne œuvre." - 2 Corinthiens 9:8 Dieu
+        nous comble de Sa grâce sans fin. Nous n'avons pas à "tenir nos comptes"
+        pour obtenir Sa faveur, car Sa grâce est abondante et suffisante.
       </p>
     </div>
     <br />
