--- a/philharmonie.html
+++ b/philharmonie.html
@@ -454,15 +454,22 @@
       mélomanes passionnés en cliquant sur ce lien WhatsApp
     </p>
     <p style="margin: auto; text-align: center">
-      <button class="mui-button">Rejoignez la communauté Philharmonie</button>
+      <button class="mui-button">
+        <a
+          style="color: #fff"
+          target="_blank"
+          href=" https://chat.whatsapp.com/JKB34YkKLUpDbWSyo0Lm7D"
+          >Rejoignez la communauté Philharmonie</a
+        >
+      </button>
     </p>
     <br /><br />>
-    <header>
+    <!-- <header>
       <h1>
         Explorez visuellement quelques-uns des instruments joués par
         l'orchestre.
       </h1>
-    </header>
+    </header> -->
 
     <div class="prayer-info-container">
       <div class="prayer-info">
@@ -480,10 +487,11 @@
         </p>
         <button class="mui-button secondary">
           <a
-            href="https://api.whatsapp.com/send?phone=+22953037832&text=`Nous sommes désireux d'acheter cet instrument(Violon).
-          `
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Violon).
+          
           
           "
+            target="_blank"
             target="_blank"
             style="color: white"
             >commander</a
@@ -505,7 +513,13 @@
           représente une note différente.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Clarinette).
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -524,7 +538,13 @@
           leur type et de leur origine culturelle.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Tambour).
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -542,7 +562,13 @@
           longueur du tube, ce qui permet de produire différentes notes.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Trumpette).
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -560,7 +586,13 @@
           pour changer la hauteur des notes.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Flûte-traversière).
+          "
+            style="color: white"
+            target="_blank"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -577,7 +609,13 @@
           frappe les lames avec des maillets spéciaux en bois ou en plastique.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Xylophone).
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -595,7 +633,13 @@
           l'anche, créant ainsi le son.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Saxophone). 
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -614,7 +658,13 @@
           pour changer la hauteur des notes.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Trombone).
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -633,7 +683,13 @@
           longueur du tube.
         </p>
         <button class="mui-button secondary">
-          <a href="" style="color: white">commander</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+22953037832&text=Nous sommes désireux d'acheter cet instrument(Cornet).
+          "
+            target="_blank"
+            style="color: white"
+            >commander</a
+          >
         </button>
 
         <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
@@ -691,7 +747,8 @@
         <img src="./img/phil2.jpg" alt="Image 10" />
       </div>
     </div> -->
-    <header>
+
+    <!-- <header>
       <h1>
         Rejoignez à présent notre philharmonie et continuez l'aventure avec
         nous.
@@ -794,7 +851,7 @@
       <button id="submitButton" type="submit">Soumettre</button>
       <p id="messageParagraph"></p>
     </form>
-    <p id="messageParagraph"></p>
+    <p id="messageParagraph"></p> -->
 
     <!-- <div class="containers">
       <div class="boxs box1s">
@@ -858,7 +915,73 @@
         </button>
       </div>
     </div> -->
+    <div class="containers">
+      <div class="boxs box1s">
+        <div class="icons">
+          <span class="icon">&#128161;</span>
+          <button style="background-color: #ffc400" class="mui-button success">
+            <a style="color: #fff" href="newsletter.html"
+              >The daily mediation</a
+            >
+          </button>
+        </div>
+        <h2 style="color: white">Recevoir une méditation tous les jours</h2>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: white" href="newsletter.html#subscribe"
+            >JE MABONNE</a
+          >
+        </button>
+      </div>
+      <div class="boxs box2s">
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: #fff" href="form_temoignage.html">MON TÉMOIGNAGE</a>
+        </button>
 
+        <button
+          style="
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: transparent;
+
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: #fff" href="contact.html">NOUS ÉCRIRE UN EMAIL</a>
+        </button>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a style="color: #fff" href="prayer.html">DEMANDER LA PRIÈRE</a>
+        </button>
+      </div>
+    </div>
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
