--- a/prayer.html
+++ b/prayer.html
@@ -324,13 +324,13 @@
     <!-- Page Header End -->
 
     <div id="textLong">
-      <p style="text-align: justify">
+      <p style="text-align: justify; padding: 15px">
         Vous êtes confronté à un défi et recherchez une solution? N'hésitez pas
         à nous exposer votre préoccupation dans l'espace dédié ci-dessous. En
         collaboration avec nos partenaires de prière, nous sommes prêts à
         intercéder en votre faveur. Votre demande demeurera confidentielle.
       </p>
-      <p>
+      <p style="text-align: justify; padding: 15px">
         La Bible nous encourage inlassablement à nous tourner vers la prière.
         Notre conviction réside dans la certitude que Dieu répond aux prières
         lorsque nous les formulons. La prière est une force puissante, et cette
@@ -343,7 +343,7 @@
         l’on vous ouvrira. Car quiconque demande reçoit, celui qui cherche
         trouve, et l’on ouvrira à celui qui frappe. »
       </p>
-      <p>
+      <p style="text-align: justify; padding: 15px">
         Nous sommes déterminés à intercéder pour vous, croyant que Dieu
         intervient dans chaque situation. Vous n'avez qu'à remplir simplement le
         formulaire ci-dessous, en exposant brièvement et clairement votre
@@ -354,7 +354,7 @@
         confidentielle et ne seront pas divulguées à des tiers. Votre requête
         sera transmise de manière anonyme à nos équipes de prière.
       </p>
-      <p>Veuillez remplir tous les champs suivants :</p>
+      <p style="text-align: justify; padding: 15px"></p>
     </div>
 
     <br />
