--- a/about.html
+++ b/about.html
@@ -394,14 +394,14 @@ Objectifs
     <div class="icons">
 
       <span class="icon">&#128161;</span>
-      <button class="mui-button success"><a href="newsletter.html">The daily mediation</a></button>
+      <button style="background-color: #ffc400;" class="mui-button success"><a style="color: #fff;"  href="newsletter.html">The daily mediation</a></button>
     </div>
     <h2 style="color: white;">Recevoir une méditation tous les jours</h2>
     <button style=" margin: 5px;  padding: 10px 20px;
     background-color: transparent; 
     color: #fff;
     border: 1px solid white;;
-    cursor: pointer;"><a href="newsletter.html#subscribe">JE MABONNE</a></button>
+    cursor: pointer;"><a style="color: white;" href="newsletter.html#subscribe">JE MABONNE</a></button>
   </div>
   <div class="boxs box2s">
 
@@ -409,18 +409,18 @@ Objectifs
     background-color: transparent; 
     color: #fff;
     border: 1px solid white;;
-    cursor: pointer;"><a href="newsletter.html#subscribe">MON TÉMOIGNAGE</a></button>
+    cursor: pointer;"><a style="color: #fff;"  href="form_temoignage.html">MON TÉMOIGNAGE</a></button>
     
     <button style="   padding: 10px 20px;margin: 5px;
     background-color: transparent; 
    
     border: 1px solid white;
-    cursor: pointer;"><a href="contact.html">NOUS ÉCRIRE UN EMAIL</a></button>    <button style=" margin: 5px;  padding: 10px 20px;
+    cursor: pointer;"><a  style="color: #fff;" href="contact.html">NOUS ÉCRIRE UN EMAIL</a></button>    <button style=" margin: 5px;  padding: 10px 20px;
   background-color: transparent; 
 
   color: #fff;
   border: 1px solid white;
-  cursor: pointer;"><a href="prayer.html">DEMANDER LA PRIÈRE</a></button>   
+  cursor: pointer;"><a  style="color: #fff;"  href="prayer.html">DEMANDER LA PRIÈRE</a></button>   
  
   </div>
 </div>
